--- a/main.html
+++ b/main.html
@@ -6,25 +6,25 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 <h1>Spaghetti Recipe</h1>
-<h1>Ingredients</h1>
+<h2>Ingredients</h2>
 <ul>
-	<li>Spaghetti</li>
-	<li>Marinara Sauce</li>
-	<li>Salt</li>
-	<li>Water</li>
+	<li><b>Spaghetti</b></li>
+	<li><b>Marinara Sauce</b></li>
+	<li><b>Salt</b></li>
+	<li><b>Water</b></li>
 </ul>
-<h1>Instructions</h1>
+<h2>Instructions</h2>
 <ol>
-	<li>Bring water to a boil.</li>
-	<li>Add spaghetti to boiling water.
+	<li><b>Bring water to a boil.</b></li>
+	<li><b>Add spaghetti to boiling water.</b>
 		<ol>
-			<li>Add salt to taste.</li>
-			<li>Cook for 10 minutes, stirring occasionally.</li>
+			<li><b>Add salt to taste.</b></li>
+			<li><b>Cook for 10 minutes, stirring occasionally.</b></li>
 		</ol>
 	</li>
-	<li>Add marinara sauce to a pan, bringing to a simmer.</li>
-	<li>Mix cooked spaghetti with marinara sauce.</li>
-	<li>Enjoy!</li>
+	<li><b>Add marinara sauce to a pan, bringing to a simmer.</b></li>
+	<li><b>Mix cooked spaghetti with marinara sauce.</b></li>
+	<li><b>Enjoy!</b></li>
 	
 </ol>
 
